--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # Build directories
 build/
 bin/
+objects/
 
 # IDE and editor files
 .vscode/
@@ -29,3 +30,5 @@ vendor/
 
 .DS_Store
 *.hpp.gch
+
+dependencies/
